# lua-bytecode-fun

./: Cargo.toml  README.md  tempCodeRunnerFile.julia
bytecode/: Cargo.toml
bytecode/src/: lib.rs
bytecode/src/lua51/: deserialize.rs  instruction.rs  luac.rs  mod.rs  reader.rs  serialize.rs  writer.rs
ir/: Cargo.toml
ir/src/: context.rs  control_flow.rs  lib.rs
obfuscation/: Cargo.toml  todo.md
obfuscation/examples/control_flow/: flattening.lua  flattening_tforloop.lua
obfuscation/src/: debug.rs  lib.rs
obfuscation/src/bytecode/: mod.rs
obfuscation/src/bytecode/control_flow/: flatten.md  flatten.rs  mod.rs  registers.rs
obfuscation/src/bytecode/control_flow/flattening_fails/: flatten.rs  flatten_backup.rs  mod.rs
obfuscation/src/bytecode/includes/: luac.out  pop.lua  push.lua  test.lua
playground/: Cargo.toml
playground/examples/: luac.out  tempCodeRunnerFile.lua  test_file.lua  test_file.out
playground/src/: main.rs  tests.rs
