[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecode = { path = "../bytecode" }
ir = { path = "../ir" }
obfuscation = { path = "../obfuscation" }
clipboard = "0.5.0"